# Order2ForIrregularDomains

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile.in  ListFunctions.tex
docs/ModificationMatrice/: ModificationMatrice.tex
docs/RapportIntermediaire/: RapportIntermediaire.tex
docs/SparseMatrix/: SparseMatrix.tex
docs/UnificationPoissonChaleur/: UnificationPoissonChaleur.tex
docs/explication_matrice_chaleur/: algorithme.tex  exemples.tex  explications.tex  matrice.tex  secondOrdre.tex  secondOrdreNvx.tex
exec/: Example1  ExampleTest
libs/: lib.cmake
libs/EIGEN/share/eigen3/cmake/: Eigen3Config.cmake  Eigen3Targets.cmake
libs/VTK-8.2.0/lib/: libvtkChartsCore-8.2.so.1  libvtkChartsCorePython27D-8.2.so.1  libvtkCommonColor-8.2.so.1  libvtkCommonColorPython27D-8.2.so.1  libvtkCommonComputationalGeometry-8.2.so.1  libvtkCommonComputationalGeometryPython27D-8.2.so.1  libvtkCommonExecutionModel-8.2.so.1  libvtkCommonExecutionModelPython27D-8.2.so.1  libvtkCommonMath-8.2.so.1  libvtkCommonMathPython27D-8.2.so.1  libvtkCommonMisc-8.2.so.1  libvtkCommonMiscPython27D-8.2.so.1  libvtkCommonSystem-8.2.so.1  libvtkCommonSystemPython27D-8.2.so.1  libvtkCommonTransforms-8.2.so.1  libvtkCommonTransformsPython27D-8.2.so.1  libvtkDICOMParser-8.2.so.1  libvtkDomainsChemistry-8.2.so.1  libvtkDomainsChemistryOpenGL2-8.2.so.1  libvtkDomainsChemistryOpenGL2Python27D-8.2.so.1  libvtkDomainsChemistryPython27D-8.2.so.1  libvtkFiltersAMR-8.2.so.1  libvtkFiltersAMRPython27D-8.2.so.1  libvtkFiltersCorePython27D-8.2.so.1  libvtkFiltersExtraction-8.2.so.1  libvtkFiltersExtractionPython27D-8.2.so.1  libvtkFiltersFlowPaths-8.2.so.1  libvtkFiltersFlowPathsPython27D-8.2.so.1  libvtkFiltersGeneral-8.2.so.1  libvtkFiltersGeneralPython27D-8.2.so.1  libvtkFiltersGeneric-8.2.so.1  libvtkFiltersGenericPython27D-8.2.so.1  libvtkFiltersGeometry-8.2.so.1  libvtkFiltersGeometryPython27D-8.2.so.1  libvtkFiltersHybrid-8.2.so.1  libvtkFiltersHybridPython27D-8.2.so.1  libvtkFiltersHyperTree-8.2.so.1  libvtkFiltersHyperTreePython27D-8.2.so.1  libvtkFiltersImaging-8.2.so.1  libvtkFiltersImagingPython27D-8.2.so.1  (+180 more)
libs/VTK-8.2.0/lib/cmake/vtk-8.2/: VTKConfig.cmake  VTKTargets-release.cmake  VTKTargets.cmake
libs/VTK-8.2.0/lib/cmake/vtk-8.2/Modules/: vtkFiltersPythonHierarchy.txt  vtkPython.cmake  vtkPythonContext2DHierarchy.txt  vtkRenderingQtHierarchy.txt
src/: Chaleur1D.cpp  main.cpp
src/BacASable/: CMakeLists.txt  main.cpp
src/Example1/: CMakeLists.txt  main.cpp
src/Example10/: CMakeLists.txt  main.cpp
src/Example11/: CMakeLists.txt
src/Example12/: CMakeLists.txt  main.cpp
src/Example2/: CMakeLists.txt  main.cpp
src/Example3/: CMakeLists.txt  main.cpp
src/Example4/: CMakeLists.txt  main.cpp
src/Example5/: CMakeLists.txt  main.cpp
src/Example6/: CMakeLists.txt  main.cpp
src/Example7/: CMakeLists.txt  main.cpp
src/Example7C/: CMakeLists.txt  builder.cpp  headers.h  main.cpp
src/Example8/: CMakeLists.txt  main.cpp
src/Example8C/: CMakeLists.txt  builder.cpp  headers.h  main.cpp
src/Example9/: CMakeLists.txt  main.cpp
src/Example9C/: CMakeLists.txt  builder.cpp  main.cpp
src/ExampleTest/: CMakeLists.txt  main.cpp
src/Example_01/: CMakeLists.txt  main.cpp
src/Example_02/: CMakeLists.txt  main.cpp
src/Example_03/: CMakeLists.txt  main.cpp
src/Example_04/: CMakeLists.txt  main.cpp
src/Example_05/: CMakeLists.txt  main.cpp
src/Example_06/: CMakeLists.txt  main.cpp
src/Example_07/: CMakeLists.txt  builder.cpp  main.cpp
src/Example_08/: CMakeLists.txt  builder.cpp  headers.h  main.cpp
src/Example_09/: CMakeLists.txt  builder.cpp  headers.h  main.cpp
src/Example_10/: CMakeLists.txt  builder.cpp  headers.h  main.cpp
src/Example_12/: CMakeLists.txt  main.cpp
src/Example_TVD_WENO/: CMakeLists.txt  main.cpp
src/O2FID/: CMakeLists.txt  O2FID.h
src/O2FID/Base/: abstractbase.cpp  abstractbase.h
src/O2FID/Border/: border.cpp  border.h
src/O2FID/BoundaryConditions/: impose.cpp  impose.h
src/O2FID/Data/: cell.cpp  cell.h  data.h  datatypedefinitions.h  point.cpp  point.h  typedefinitions.h
src/O2FID/Errors/: errorsbuilder.cpp  errorsbuilder.h
src/O2FID/Fun2Vect/: funtovec.cpp  funtovec.h
src/O2FID/Matrix/: matrixbuilder.cpp  matrixbuilder.h
src/O2FID/Mesh/: mesh.cpp  mesh.h
src/O2FID/Outputs/: writer.cpp  writer.h
src/O2FID/Solver/: solver.cpp  solver.h
src/O2FID/Stefan/: field.cpp  field.h  interface.cpp  interface.h  stefan.h  wfield.cpp  wfield.h
src/O2FID/Toolbox/: DiffFinite.h  differencefinite.cpp  differencefinite.h  toolbox.cpp  toolbox.h
src/O2FID/Tools/: border.cpp  border.h  errors.cpp  errors.h  funtovec.cpp  funtovec.h  impose.cpp  impose.h  matrix.cpp  matrix.h  solver.cpp  solver.h  tools.h
src/O2FID_bis/: CMakeLists.txt  O2FID.h
src/O2FID_bis/Border/: border.cpp  border.h
src/O2FID_bis/BoundaryConditions/: impose.cpp  impose.h
src/O2FID_bis/Data/: data.h  point.cpp  point.h
src/O2FID_bis/Errors/: errorsbuilder.cpp  errorsbuilder.h
src/O2FID_bis/FunToVect/: funtovec.cpp  funtovec.h
src/O2FID_bis/Matrix/: matrixbuilder.cpp  matrixbuilder.h
src/O2FID_bis/Mesh/: mesh.cpp  mesh.h
src/O2FID_bis/Outputs/: writer.cpp  writer.h
src/O2FID_bis/Solver/: solver.cpp  solver.h
src/TestChaleur/: CMakeLists.txt  Chaleur1D.h
